--- a/common.yaml
+++ b/common.yaml
@@ -41,28 +41,28 @@ payload:
   - DOMAIN-KEYWORD,wikipedia
   - DOMAIN-KEYWORD,youtube
   - DOMAIN-KEYWORD,ytimg
-  - DOMAIN-SUFFIX,adobe.com,JMS
-  - DOMAIN-SUFFIX,blogger.com,JMS
-  - DOMAIN-SUFFIX,bloomberg.com,JMS
-  - DOMAIN-SUFFIX,codepen.io,JMS
-  - DOMAIN-SUFFIX,fb.me,JMS
-  - DOMAIN-SUFFIX,fbcdn.net,JMS
-  - DOMAIN-SUFFIX,grammarly.com,JMS
-  - DOMAIN-SUFFIX,gstatic.com,JMS
-  - DOMAIN-SUFFIX,ietf.org,JMS
-  - DOMAIN-SUFFIX,ifixit.com,JMS
-  - DOMAIN-SUFFIX,imgur.com,JMS
-  - DOMAIN-SUFFIX,jquery.com,JMS
-  - DOMAIN-SUFFIX,nature.com,JMS
-  - DOMAIN-SUFFIX,nytimes.com,JMS
-  - DOMAIN-SUFFIX,opentracing.io,JMS
-  - DOMAIN-SUFFIX,rsshub.app,JMS
-  - DOMAIN-SUFFIX,sketch.com,JMS
-  - DOMAIN-SUFFIX,sketchapp.com,JMS
-  - DOMAIN-SUFFIX,sonatype.org,JMS
-  - DOMAIN-SUFFIX,speedtest.net,JMS
-  - DOMAIN-SUFFIX,spring.io,JMS
-  - DOMAIN-SUFFIX,t.co,JMS
-  - DOMAIN-SUFFIX,t.me,JMS
-  - DOMAIN-SUFFIX,t66y.com,JMS
-  - DOMAIN-SUFFIX,youtu.be,JMS
+  - DOMAIN-SUFFIX,adobe.com
+  - DOMAIN-SUFFIX,blogger.com
+  - DOMAIN-SUFFIX,bloomberg.com
+  - DOMAIN-SUFFIX,codepen.io
+  - DOMAIN-SUFFIX,fb.me
+  - DOMAIN-SUFFIX,fbcdn.net
+  - DOMAIN-SUFFIX,grammarly.com
+  - DOMAIN-SUFFIX,gstatic.com
+  - DOMAIN-SUFFIX,ietf.org
+  - DOMAIN-SUFFIX,ifixit.com
+  - DOMAIN-SUFFIX,imgur.com
+  - DOMAIN-SUFFIX,jquery.com
+  - DOMAIN-SUFFIX,nature.com
+  - DOMAIN-SUFFIX,nytimes.com
+  - DOMAIN-SUFFIX,opentracing.io
+  - DOMAIN-SUFFIX,rsshub.app
+  - DOMAIN-SUFFIX,sketch.com
+  - DOMAIN-SUFFIX,sketchapp.com
+  - DOMAIN-SUFFIX,sonatype.org
+  - DOMAIN-SUFFIX,speedtest.net
+  - DOMAIN-SUFFIX,spring.io
+  - DOMAIN-SUFFIX,t.co
+  - DOMAIN-SUFFIX,t.me
+  - DOMAIN-SUFFIX,t66y.com
+  - DOMAIN-SUFFIX,youtu.be
