--- a/common.yaml
+++ b/common.yaml
@@ -1,5 +1,6 @@
 payload:
   - DOMAIN-KEYWORD,amazon
+  - DOMAIN-KEYWORD,bbc
   - DOMAIN-KEYWORD,disqus
   - DOMAIN-KEYWORD,docker
   - DOMAIN-KEYWORD,dribbble
