--- a/common.yaml
+++ b/common.yaml
@@ -67,6 +67,7 @@ payload:
   - DOMAIN-SUFFIX,news.gov.hk
   - DOMAIN-SUFFIX,npmjs.com
   - DOMAIN-SUFFIX,opentracing.io
+  - DOMAIN-SUFFIX,pokemon-home.com
   - DOMAIN-SUFFIX,rsshub.app
   - DOMAIN-SUFFIX,sketch.com
   - DOMAIN-SUFFIX,sketchapp.com
