--- a/config.yaml
+++ b/config.yaml
@@ -42,12 +42,12 @@ log-level: info
 ipv6: false
 
 # RESTful web API listening address
-external-controller: 127.0.0.1:9090
+# external-controller: 127.0.0.1:9090
 
 # A relative path to the configuration directory or an absolute path to a
 # directory in which you put some static web resource. Clash core will then
 # serve it at `http://{{external-controller}}/ui`.
-external-ui: folder
+# external-ui: folder
 
 # Secret for the RESTful API (optional)
 # Authenticate by spedifying HTTP header `Authorization: Bearer ${secret}`
@@ -73,6 +73,9 @@ profile:
   # set false If you don't want this behavior
   # when two different configurations have groups with the same name, the selected values are shared
   store-selected: true
+  
+  # open tracing exporter API
+  tracing: true
 
 # DNS server settings
 # This section is optional. When not present, the DNS server will be disabled.
