--- a/config.yaml
+++ b/config.yaml
@@ -42,7 +42,7 @@ log-level: info
 ipv6: false
 
 # RESTful web API listening address
-# external-controller: 127.0.0.1:9090
+external-controller: 0.0.0.0:9090
 
 # A relative path to the configuration directory or an absolute path to a
 # directory in which you put some static web resource. Clash core will then
@@ -73,7 +73,7 @@ profile:
   # set false If you don't want this behavior
   # when two different configurations have groups with the same name, the selected values are shared
   store-selected: true
-  
+
   # open tracing exporter API
   tracing: true
 
