--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ redir-port: 7892
 # Transparent proxy server port for Linux (TProxy TCP and TProxy UDP)
 # tproxy-port: 7893
 
-# HTTP(S) and SOCKS5 server on the same port
+# HTTP(S) and SOCKS4(A)/SOCKS5 server on the same port
 mixed-port: 7890
 
 # authentication of local SOCKS5/HTTP(S) server
@@ -57,6 +57,9 @@ external-controller: 0.0.0.0:9090
 # Outbound interface name
 # interface-name: en0
 
+# fwmark on Linux only
+# routing-mark: 6666
+
 # Static hosts for DNS server and connection establishment (like /etc/hosts)
 #
 # Wildcard hostnames are supported (e.g. *.clash.dev, *.foo.*.example.com)
@@ -74,6 +77,9 @@ profile:
   # when two different configurations have groups with the same name, the selected values are shared
   store-selected: true
 
+  # persistence fakeip
+  store-fake-ip: true
+
   # open tracing exporter API
   tracing: true
 
@@ -81,7 +87,7 @@ profile:
 # This section is optional. When not present, the DNS server will be disabled.
 dns:
   enable: false
-  listen: 0.0.0.0:53
+  listen: 0.0.0.0:8853
   # ipv6: false # when the false, response to AAAA questions will be empty
 
   # These nameservers are used to resolve the DNS nameserver hostnames below.
@@ -89,16 +95,16 @@ dns:
   default-nameserver:
     - 114.114.114.114
     - 8.8.8.8
-  enhanced-mode: redir-host # or fake-ip
+  enhanced-mode: fake-ip # or redir-host
   fake-ip-range: 198.18.0.1/16 # Fake IP addresses pool CIDR
-  # use-hosts: true # lookup hosts and return IP record
+  use-hosts: true # lookup hosts and return IP record
 
   # Hostnames in this list will not be resolved with fake IPs
   # i.e. questions to these domain names will always be answered with their
   # real IP addresses
-  # fake-ip-filter:
-  #   - '*.lan'
-  #   - localhost.ptlogin2.qq.com
+  fake-ip-filter:
+    - "*.lan"
+    # - localhost.ptlogin2.qq.com
 
   # Supports UDP, TCP, DoT, DoH. You can specify the port to connect to.
   # All DNS questions are sent directly to the nameserver, without proxies
@@ -108,13 +114,14 @@ dns:
     - 8.8.8.8 # default value
     - tls://dns.rubyfish.cn:853 # DNS over TLS
     - https://1.1.1.1/dns-query # DNS over HTTPS
+    # - dhcp://en0 # dns from dhcp
 
   # When `fallback` is present, the DNS server will send concurrent requests
   # to the servers in this section along with servers in `nameservers`.
   # The answers from fallback servers are used when the GEOIP country
   # is not `CN`.
-  # fallback:
-  #   - tcp://1.1.1.1
+  fallback:
+    - https://doh.pub/dns-query
 
   # If IP addresses resolved with servers in `nameservers` are in the specified
   # subnets below, they are considered invalid and results from `fallback`
@@ -129,12 +136,13 @@ dns:
   # This is a countermeasure against DNS pollution attacks.
   fallback-filter:
     geoip: true
-    ipcidr:
-      # - 240.0.0.0/4
-    # domain:
-    #   - '+.google.com'
-    #   - '+.facebook.com'
-    #   - '+.youtube.com'
+    geoip-code: CN
+  #   ipcidr:
+  #     - 240.0.0.0/4
+  #   domain:
+  #     - '+.google.com'
+  #     - '+.facebook.com'
+  #     - '+.youtube.com'
 
   # Lookup domains via specific nameservers
   # nameserver-policy:
