--- a/common.yaml
+++ b/common.yaml
@@ -6,6 +6,7 @@ payload:
   - DOMAIN-KEYWORD,dribbble
   - DOMAIN-KEYWORD,dropbox
   - DOMAIN-KEYWORD,facebook
+  - DOMAIN-KEYWORD,feedburner
   - DOMAIN-KEYWORD,ggpht
   - DOMAIN-KEYWORD,github
   - DOMAIN-KEYWORD,gmail
