--- a/config.yaml
+++ b/config.yaml
@@ -177,13 +177,13 @@ rule-providers:
   common:
     type: http
     behavior: classical
-    url: https://cdn.jsdelivr.net/gh/fantasticmao/clash-rules@main/common.yaml
+    url: https://fastly.jsdelivr.net/gh/fantasticmao/clash-rules@main/common.yaml
     interval: 3600
     path: ./ruleset/common.yaml
   telegramcidr:
     type: http
     behavior: classical
-    url: https://cdn.jsdelivr.net/gh/fantasticmao/clash-rules@main/telegramcidr.yaml
+    url: https://fastly.jsdelivr.net/gh/fantasticmao/clash-rules@main/telegramcidr.yaml
     interval: 3600
     path: ./ruleset/telegramcidr.yaml
 
