--- a/common.yaml
+++ b/common.yaml
@@ -48,6 +48,7 @@ payload:
   - DOMAIN-KEYWORD,ytimg
   - DOMAIN-SUFFIX,a-wing.top
   - DOMAIN-SUFFIX,adobe.com
+  - DOMAIN-SUFFIX,apple.com
   - DOMAIN-SUFFIX,blogger.com
   - DOMAIN-SUFFIX,bloomberg.com
   - DOMAIN-SUFFIX,codecov.io
