--- a/common.yaml
+++ b/common.yaml
@@ -86,5 +86,6 @@ payload:
   - DOMAIN-SUFFIX,tingtalk.me
   - DOMAIN-SUFFIX,ttvnw.net
   - DOMAIN-SUFFIX,t66y.com
+  - DOMAIN-SUFFIX,ubuntu.com
   - DOMAIN-SUFFIX,ycombinator.com
   - DOMAIN-SUFFIX,youtu.be
