--- a/common.yaml
+++ b/common.yaml
@@ -16,6 +16,7 @@ payload:
   - DOMAIN-KEYWORD,google
   - DOMAIN-KEYWORD,grpc
   - DOMAIN-KEYWORD,icloud
+  - DOMAIN-KEYWORD,imdb
   - DOMAIN-KEYWORD,instagram
   - DOMAIN-KEYWORD,jetbrains
   - DOMAIN-KEYWORD,medium
