--- a/common.yaml
+++ b/common.yaml
@@ -64,6 +64,7 @@ payload:
   - DOMAIN-SUFFIX,diygod.me
   - DOMAIN-SUFFIX,fb.me
   - DOMAIN-SUFFIX,fbcdn.net
+  - DOMAIN-SUFFIX,figma.com
   - DOMAIN-SUFFIX,files.pythonhosted.org
   - DOMAIN-SUFFIX,ftchinese.com
   - DOMAIN-SUFFIX,grafana.com
