--- a/common.yaml
+++ b/common.yaml
@@ -62,6 +62,7 @@ payload:
   - DOMAIN-SUFFIX,codecov.io
   - DOMAIN-SUFFIX,codepen.io
   - DOMAIN-SUFFIX,diygod.me
+  - DOMAIN-SUFFIX,economist.com
   - DOMAIN-SUFFIX,fb.me
   - DOMAIN-SUFFIX,fbcdn.net
   - DOMAIN-SUFFIX,figma.com
