--- a/common.yaml
+++ b/common.yaml
@@ -61,6 +61,7 @@ payload:
   - DOMAIN-SUFFIX,cdn.sstatic.net
   - DOMAIN-SUFFIX,codecov.io
   - DOMAIN-SUFFIX,codepen.io
+  - DOMAIN-SUFFIX,debian.org
   - DOMAIN-SUFFIX,diygod.me
   - DOMAIN-SUFFIX,economist.com
   - DOMAIN-SUFFIX,fb.me
