--- a/common.yaml
+++ b/common.yaml
@@ -92,6 +92,7 @@ payload:
   - DOMAIN-SUFFIX,opentracing.io
   - DOMAIN-SUFFIX,pixiv.net
   - DOMAIN-SUFFIX,pokemon-home.com
+  - DOMAIN-SUFFIX,proxmox.com
   - DOMAIN-SUFFIX,ptt.cc
   - DOMAIN-SUFFIX,pximg.net
   - DOMAIN-SUFFIX,pypi.org
