--- a/common.yaml
+++ b/common.yaml
@@ -54,6 +54,7 @@ payload:
   - DOMAIN-SUFFIX,adobe.com
   - DOMAIN-SUFFIX,apache.org
   - DOMAIN-SUFFIX,apple.com
+  - DOMAIN-SUFFIX,argotunnel.com
   - DOMAIN-SUFFIX,blogger.com
   - DOMAIN-SUFFIX,bloomberg.com
   - DOMAIN-SUFFIX,catchen.me
