--- a/common.yaml
+++ b/common.yaml
@@ -49,6 +49,7 @@ payload:
   - DOMAIN-SUFFIX,a-wing.top
   - DOMAIN-SUFFIX,adobe.com
   - DOMAIN-SUFFIX,akamaihd.net
+  - DOMAIN-SUFFIX,alpinelinux.org
   - DOMAIN-SUFFIX,apache.org
   - DOMAIN-SUFFIX,apple.com
   - DOMAIN-SUFFIX,archive.org
