--- a/common.yaml
+++ b/common.yaml
@@ -13,7 +13,6 @@ payload:
   - DOMAIN-KEYWORD,godoc
   - DOMAIN-KEYWORD,golang
   - DOMAIN-KEYWORD,google
-  - DOMAIN-KEYWORD,grpc
   - DOMAIN-KEYWORD,icloud
   - DOMAIN-KEYWORD,imdb
   - DOMAIN-KEYWORD,instagram
@@ -89,6 +88,7 @@ payload:
   - DOMAIN-SUFFIX,grafana.com
   - DOMAIN-SUFFIX,grammarly.com
   - DOMAIN-SUFFIX,gravatar.com
+  - DOMAIN-SUFFIX,grpc.io
   - DOMAIN-SUFFIX,gstatic.com
   - DOMAIN-SUFFIX,ietf.org
   - DOMAIN-SUFFIX,ifixit.com
