--- a/common.yaml
+++ b/common.yaml
@@ -73,6 +73,7 @@ payload:
   - DOMAIN-SUFFIX,docker.com
   - DOMAIN-SUFFIX,docker.io
   - DOMAIN-SUFFIX,economist.com
+  - DOMAIN-SUFFIX,excalidraw.com
   - DOMAIN-SUFFIX,fb.me
   - DOMAIN-SUFFIX,fbcdn.net
   - DOMAIN-SUFFIX,figma.com
