--- a/common.yaml
+++ b/common.yaml
@@ -45,6 +45,7 @@ payload:
   - DOMAIN-KEYWORD,wikipedia
   - DOMAIN-KEYWORD,youtube
   - DOMAIN-KEYWORD,ytimg
+  - DOMAIN-SUFFIX,91porn.com
   - DOMAIN-SUFFIX,a-wing.top
   - DOMAIN-SUFFIX,adobe.com
   - DOMAIN-SUFFIX,akamaihd.net
