--- a/common.yaml
+++ b/common.yaml
@@ -114,6 +114,7 @@ payload:
   - DOMAIN-SUFFIX,obsproject.com
   - DOMAIN-SUFFIX,openai.com
   - DOMAIN-SUFFIX,opentracing.io
+  - DOMAIN-SUFFIX,plantuml.com
   - DOMAIN-SUFFIX,pixiv.net
   - DOMAIN-SUFFIX,pokemon-home.com
   - DOMAIN-SUFFIX,prestodb.io
