--- a/common.yaml
+++ b/common.yaml
@@ -106,6 +106,7 @@ payload:
   - DOMAIN-SUFFIX,justmysocks2.net
   - DOMAIN-SUFFIX,justmysocks5.net
   - DOMAIN-SUFFIX,leetcode.com
+  - DOMAIN-SUFFIX,mongodb.com
   - DOMAIN-SUFFIX,msecnd.net
   - DOMAIN-SUFFIX,mysql.com
   - DOMAIN-SUFFIX,nature.com
