--- a/common.yaml
+++ b/common.yaml
@@ -69,6 +69,7 @@ payload:
   - DOMAIN-SUFFIX,cms-twdigitalassets.com
   - DOMAIN-SUFFIX,codecov.io
   - DOMAIN-SUFFIX,codepen.io
+  - DOMAIN-SUFFIX,crystalmark.info
   - DOMAIN-SUFFIX,debian.org
   - DOMAIN-SUFFIX,devv.ai
   - DOMAIN-SUFFIX,diygod.me
