--- a/common.yaml
+++ b/common.yaml
@@ -109,6 +109,7 @@ payload:
   - DOMAIN-SUFFIX,live.com
   - DOMAIN-SUFFIX,leetcode.com
   - DOMAIN-SUFFIX,microsoft.com
+  - DOMAIN-SUFFIX,microsoft365.com
   - DOMAIN-SUFFIX,mongodb.com
   - DOMAIN-SUFFIX,msecnd.net
   - DOMAIN-SUFFIX,mysql.com
