--- a/common.yaml
+++ b/common.yaml
@@ -45,6 +45,7 @@ payload:
   - DOMAIN-SUFFIX,adobe.com
   - DOMAIN-SUFFIX,akamaihd.net
   - DOMAIN-SUFFIX,alpinelinux.org
+  - DOMAIN-SUFFIX,anthropic.com
   - DOMAIN-SUFFIX,apache.org
   - DOMAIN-SUFFIX,apple.com
   - DOMAIN-SUFFIX,archive.org
