--- a/common.yaml
+++ b/common.yaml
@@ -166,3 +166,4 @@ payload:
   - DOMAIN-SUFFIX,x.com
   - DOMAIN-SUFFIX,ycombinator.com
   - DOMAIN-SUFFIX,youtu.be
+  - DOMAIN-SUFFIX,youtubekids.com
